<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:scrollbars="vertical"
    tools:context="com.google.firebase.quickstart.database.java.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            android:indeterminate="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            style="?android:attr/progressBarStyleHorizontal"/>

        <TextView
            android:id="@+id/caption"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />

        <ImageView
            android:id="@+id/firebaseLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_2"
            android:src="@drawable/firebase_lockup_400" />

        <LinearLayout
            android:id="@+id/layoutSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:visibility="gone">

            <TextView
                android:id="@+id/statusSignIn"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_1"
                android:text="@string/sign_in_prompt" />

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="@dimen/standard_field_width"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_anonymously" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutStorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_1"
                android:text="@string/take_photo_prompt" />

            <Button
                android:id="@+id/buttonCamera"
                android:layout_width="@dimen/standard_field_width"
                android:layout_height="wrap_content"
                android:text="@string/camera_button_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_1"
                android:layout_marginTop="@dimen/margin_2"
                android:text="@string/label_link" />

            <TextView
                android:id="@+id/pictureDownloadUri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                tools:text="http://www.example.com/?id=UAOJNVKBMQUGPYZKCQZRZKJEXRCRXMRSMFBZBMBODWUSVTDXJCPJMYOKQQBODSGPYHPZUR" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_1"
                android:layout_marginTop="@dimen/margin_2"
                android:text="@string/label_download" />

            <Button
                android:id="@+id/buttonDownload"
                android:layout_width="@dimen/standard_field_width"
                android:layout_height="wrap_content"
                android:text="@string/download" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
